fixed dropbox link

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <a class="n02" href="https://www.linkedin.com/in/houlkaer/" target="_blank"><svg><use xlink:href="#icon-90b"></use></svg><span class="label">LinkedIn</span></a><svg><use xlink:href="#icon-9fe"></use></svg>
         </li>
         <li>
-          <a class="n03" href="https://www.dropbox.com/s/hwc3svuuecz77gk/CV-2020.pdf?dl=0" target="_blank"><svg><use xlink:href="#icon-950"></use></svg><span class="label">CV</span></a><svg><use xlink:href="#icon-9fe"></use></svg>
+          <a class="n03" href="https://houlkaer.net" target="_blank"><svg><use xlink:href="#icon-950"></use></svg><span class="label">CV</span></a><svg><use xlink:href="#icon-9fe"></use></svg>
         </li>
         <li>
           <a class="n04" href="https://orcid.org/0000-0002-5144-8388" target="_blank"><svg><use xlink:href="#icon-a3d"></use></svg><span class="label">ORCID</span></a><svg><use xlink:href="#icon-9fe"></use></svg>
